src/components/header/Header.module.css
.header {
    position: fixed;
    top: 0;
    width: 100%;
    height: 70px;
    margin: 0 auto;
    padding: 0 100px;
    background-color: var(--white);
    display: flex;
    align-items: center;
    justify-content: space-between;
    transition: 0.2s;
    z-index: 998;
}

.logo a {
    color: var(--gray-dark);
    font-size: var(--font-size-header-logo);
}

.nav .logo {
    display: none;
}

.nav ul {
    display: flex;
}

.nav ul li a {
    position: relative;
    display: block;
    margin: 0 2px;
    padding: 8px 18px;
    color: var(--black);
    font-size: var(--font-size-header-a);
    font-weight: calc(var(--font-weight-tag-a) + 300);
    transition: 0.2s;
    border-radius: 30px;
}

.nav ul li a:active {
    background-color: var(--blue);
    color: var(--white);
}

.nav ul li a:hover,
.button-logout:hover {
    background-color: var(--gray-dark);
    color: var(--white);
}

.nav ul li a span {
    width: 30px;
    text-align: center;
    position: absolute;
    top: 0px;
    background-color: red;
    color: var(--white);
    border-radius: 50%;
}

.button-logout {
    font-size: var(--font-size-header-a);
    font-weight: var(--font-weight-tag-a);
    margin-left: 5px;
    padding: 8px 18px;
    border: none;
    border-radius: 30px;
}

.icon {
    margin-right: 5px;
}

.hamburger {
    display: none;
    height: fit-content;
    cursor: pointer;
    padding: 3px 8px;
    border-radius: 5px;
    transition: 0.2s;
    font-size: 1.8rem;
    color: var(--gray);
}

.hamburger:hover {
    background-color: var(--gray);
    color: var(--white);
}

@media only screen and (max-width: 1400px) {
    .header {
        padding: 0 20px;
    }
}

@media only screen and (max-width: 1300px) {
    .nav {
        position: absolute;
        left: -300px;
        top: 0;
        z-index: 999;
        width: 280px;
        height: 100vh;
        background-color: var(--white);
        transition: 0.2s;
        box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.02);
    }

    .nav.active {
        left: 0;
    }

    .nav .logo {
        display: block;
        height: 70px;
        display: flex;
        align-items: center;
        margin-left: 30px;
    }

    .nav ul {
        display: block;
        padding: 0 20px;
        margin-top: 30px;
    }

    .nav ul li a {
        margin-bottom: 5px;
        padding: 10px 15px;
        border-radius: 5px;
    }

    .button-logout {
        width: 100%;
        margin-left: 0;
        border-radius: 5px;
    }

    .hamburger {
        display: block;
    }
}

@media only screen and (max-width: 550px) {
    .header {
        padding: 0 20px;
    }

    .logo {
        display: none;
    }
}

